# Agile_Pytest_Accounts

./: CMakeLists.txt  MSYS2_MINGW64.bat  README.md
include/: Account.h
src/: Account.cpp  main.cpp
tests/: test_account.py
